[gd_scene load_steps=2 format=3 uid="uid://c8n2m4k6p9q1"]

[ext_resource type="Script" path="res://scripts/ChessBoard.gd" id="1"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0784314, 0.0784314, 0.156863, 1)

[node name="UI" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0

[node name="ScoreLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Score: 0"
modulate = Color(1, 0.843137, 0, 1)

[node name="VSeparator" type="VSeparator" parent="UI/TopBar"]
layout_mode = 2

[node name="MovesLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Moves: 0"

[node name="VSeparator2" type="VSeparator" parent="UI/TopBar"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Turn: White"

[node name="HSeparator" type="HSeparator" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 64.0

[node name="HighScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
text = "High Score: 0"
horizontal_alignment = 2
modulate = Color(1, 0.843137, 0, 1)

[node name="BoardContainer" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0